# example/crud/docs/swagger.yaml
@@ -1,4 +1,97 @@
 basePath: /
+definitions:
+  dto.GetUserByIDResponse:
+    properties:
+      age:
+        example: 18
+        type: integer
+      gender:
+        enum:
+        - male
+        - female
+        example: male
+        type: string
+      id:
+        example: "1479429646645936128"
+        type: string
+      username:
+        example: Daniel
+        type: string
+    type: object
+  dto.ListUserResponse:
+    properties:
+      current:
+        example: 3
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/dto.UserDTO'
+        type: array
+      page_size:
+        example: 20
+        type: integer
+      total:
+        example: 120
+        type: integer
+      total_page:
+        example: 6
+        type: integer
+    type: object
+  dto.UserDTO:
+    properties:
+      age:
+        example: 18
+        type: integer
+      gender:
+        enum:
+        - male
+        - female
+        example: male
+        type: string
+      id:
+        example: "1479429646645936128"
+        type: string
+      username:
+        example: Daniel
+        type: string
+    type: object
+  httpx.ErrorResponse:
+    properties:
+      error:
+        $ref: '#/definitions/httpx.ResponseError'
+      status:
+        example: 400
+        type: integer
+      trace_id:
+        example: 1-trace-it
+        type: string
+    type: object
+  httpx.Response:
+    properties:
+      result: {}
+      status:
+        example: 200
+        type: integer
+      trace_id:
+        example: 1-trace-it
+        type: string
+    type: object
+  httpx.ResponseError:
+    properties:
+      code:
+        example: 400001
+        type: integer
+      details:
+        example:
+        - error detail1
+        - error detail2
+        items:
+          type: string
+        type: array
+      message:
+        example: ErrInvalidRequest
+        type: string
+    type: object
 host: localhost:3000
 info:
   contact:
@@ -12,7 +105,109 @@ info:
   termsOfService: http://swagger.io/terms/
   title: trinity-micro Example API
   version: "1.0"
-paths: {}
+paths:
+  /example-api/v1/{tenant}/users:
+    get:
+      consumes:
+      - application/json
+      description: list user information
+      parameters:
+      - description: current user id
+        in: header
+        name: current_user_id
+        type: integer
+      - description: tenant id
+        in: path
+        name: tenant
+        required: true
+        type: string
+      - description: page size
+        in: query
+        maximum: 500
+        minimum: 1
+        name: pageSize
+        required: true
+        type: integer
+      - description: page number
+        in: query
+        minimum: 1
+        name: current
+        required: true
+        type: integer
+      - description: username ilike
+        in: query
+        maxLength: 100
+        minLength: 1
+        name: username__ilike
+        type: string
+      - description: username ilike
+        in: query
+        maxLength: 100
+        minLength: 1
+        name: age
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success response
+          schema:
+            allOf:
+            - $ref: '#/definitions/httpx.Response'
+            - properties:
+                result:
+                  $ref: '#/definitions/dto.ListUserResponse'
+              type: object
+        "400":
+          description: error response
+          schema:
+            $ref: '#/definitions/httpx.ErrorResponse'
+        "500":
+          description: error response
+          schema:
+            $ref: '#/definitions/httpx.ErrorResponse'
+      summary: list user
+      tags:
+      - User
+  /example-api/v1/{tenant}/users/{id}:
+    get:
+      consumes:
+      - application/json
+      description: get string by ID
+      parameters:
+      - description: tenant id
+        in: path
+        name: tenant
+        required: true
+        type: string
+      - description: user id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success response
+          schema:
+            allOf:
+            - $ref: '#/definitions/httpx.Response'
+            - properties:
+                result:
+                  $ref: '#/definitions/dto.GetUserByIDResponse'
+              type: object
+        "400":
+          description: error response
+          schema:
+            $ref: '#/definitions/httpx.ErrorResponse'
+        "500":
+          description: error response
+          schema:
+            $ref: '#/definitions/httpx.ErrorResponse'
+      summary: Get Single user information
+      tags:
+      - User
 securityDefinitions:
   BasicAuth:
     type: basic
